Add missing definition of \Omega_0; add Makefile

--- a/resubmission/2021-02-03_resubmission/paper_PE.tex
+++ b/resubmission/2021-02-03_resubmission/paper_PE.tex
@@ -80,7 +80,7 @@
 Am M\"uhlenberg 1, Potsdam-Golm, 14476, Germany}
 \author{John G. Baker}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
-\author{Tito Dal Canton}
+\author[0000-0001-5078-9044]{Tito Dal Canton}
 \thanks{NASA Postdoctoral Program fellow}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
 \affiliation{Université Paris-Saclay, CNRS/IN2P3, IJCLab, 91405 Orsay, France}
@@ -1446,7 +1446,7 @@ These relations can be summarized by the active rotation matrix $R_{W}$ from the
 \subsection{LISA trajectories}
 \label{app:lisatraj}
 
-The orbits of the three spacecrafts around the Sun can be chosen so that, at leading order in the eccentricity of the orbits, the constellation retains the shape of an equilateral triangle in a cartwheeling motion following the Earth orbit. We denote by $a$ the semi-major axis, $e$ the eccentricity and pose $\alpha = \Omega_{0} (t-t_{0}))$, with $t_{0}$ a reference time for the initial position ($t_{0} = 0$ in our case). The reference SSB frame is $(\hat{x}, \hat{y}, \hat{z})$.
+The orbits of the three spacecrafts around the Sun can be chosen so that, at leading order in the eccentricity of the orbits, the constellation retains the shape of an equilateral triangle in a cartwheeling motion following the Earth orbit. We denote by $a$ the semi-major axis, $e$ the eccentricity and pose $\alpha = \Omega_{0} (t-t_{0})$, with $t_{0}$ a reference time for the initial position ($t_{0} = 0$ in our case) and $\Omega_{0} = 2\pi / (1\ \mathrm{yr})$. The reference SSB frame is $(\hat{x}, \hat{y}, \hat{z})$.
 
 Using the notation $c,s = \cos, \sin \alpha$, the trajectory of the center of the constellation is simply
 \be
