ORCID apparently not supported yet

--- a/resubmission/2021-02-03_resubmission/paper_PE.tex
+++ b/resubmission/2021-02-03_resubmission/paper_PE.tex
@@ -80,7 +80,7 @@
 Am M\"uhlenberg 1, Potsdam-Golm, 14476, Germany}
 \author{John G. Baker}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
-\author[0000-0001-5078-9044]{Tito Dal Canton}
+\author{Tito \surname{Dal Canton}}
 \thanks{NASA Postdoctoral Program fellow}
 \affiliation{Gravitational Astrophysics Laboratory, NASA Goddard Space Flight Center, 8800 Greenbelt Rd., Greenbelt, MD 20771, USA}
 \affiliation{Université Paris-Saclay, CNRS/IN2P3, IJCLab, 91405 Orsay, France}
